Use sane follows API

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div style="text-align:center">
-        <mat-checkbox [ngModel]="dataService.followingBody(body.id)"
+        <mat-checkbox [ngModel]="body.user_follows"
                       (change)="markFollow($event)"
                       [disabled]="!dataService.loggedIn">
           FOLLOW
