Change user avatar to svg

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -3,7 +3,7 @@
      (click)="OpenMyProfile()">
     <img class="profile-pic img-circle object-cover"
          [src]="profilePic"
-         src-fallback="assets/useravatar.jpg">
+         src-fallback="assets/useravatar.svg">
     <div class="overflow-ellipsis">
         {{ userName }}
         <div id="ldap">{{ ldap }}</div>
