--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -4,7 +4,7 @@
   <!-- Head information -->
   <div id="head">
     <img [src]="profile.profile_pic"
-         src-fallback="assets/useravatar.jpg"
+         src-fallback="assets/useravatar.svg"
          class="profile-pic img-circle object-cover">
     <div id="info-header">
       <b>{{ profile.name }}</b><br>
