--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -3,16 +3,20 @@
 <div class="detail-card real-center mat-elevation-z3" *ngIf="roles">
   <mat-tab-group class="tab-group" mat-stretch-tabs [(selectedIndex)]="selIndex">
       <mat-tab label="Following">
-        <app-event-card
-          *ngFor="let event of dataService.getFollowedEvents()"
-          [event]="event">
-        </app-event-card>
+        <div class="tab-content">
+          <app-event-card
+            *ngFor="let event of dataService.getFollowedEvents()"
+            [event]="event">
+          </app-event-card>
+        </div>
       </mat-tab>
       <mat-tab *ngFor="let role of roles" [label]="role.body_detail.name" >
-        <app-event-card
-          *ngFor="let event of role.events"
-          [event]="event">
-        </app-event-card>
+        <div class="tab-content">
+          <app-event-card
+            *ngFor="let event of role.events"
+            [event]="event">
+          </app-event-card>
+        </div>
       </mat-tab>
   </mat-tab-group>
 </div>
