--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -37,7 +37,7 @@
     <div style="text-align:center">
         <mat-checkbox [ngModel]="body.user_follows"
                       (change)="markFollow($event)"
-                      [disabled]="!dataService.loggedIn">
+                      [disabled]="!dataService.isLoggedIn()">
           FOLLOW
         </mat-checkbox>
     </div>
@@ -100,7 +100,7 @@
 
 <button mat-fab
         *ngIf="body && dataService.HasBodyPermission(body.id, 'AddE')"
-        [disabled]="!dataService.loggedIn"
+        [disabled]="!dataService.isLoggedIn()"
         class="float-fixed-right-bottom mat-elevation-z2"
         [routerLink]="['/add-event']"
         [queryParams]="{body: body.id}">
