--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<app-xunk-spinner *ngIf="!feed"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!feed || error" [error]="error"></app-xunk-spinner>
 
 <ng-container *ngIf="feed">
   <ng-container *ngFor="let item of feed">
