--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<app-xunk-spinner *ngIf="!events"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!events || error" [error]="error"></app-xunk-spinner>
 
 <app-event-sidebar-desktop
     *ngIf="events"
