--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,6 +1,6 @@
-<app-xunk-spinner *ngIf="!bodies"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!bodies || error" [error]="error"></app-xunk-spinner>
 
-<div id="searchbox">
+<div id="searchbox" *ngIf="bodies">
   <mat-form-field class="searchinput">
       <input matInput type="search"
               name="search" [(ngModel)]="searchQ"
