--- a/src/app/mess/mess.component.html
+++ b/src/app/mess/mess.component.html
@@ -1,4 +1,4 @@
-<app-xunk-spinner *ngIf="!hostels"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!hostels || error" [error]="error"></app-xunk-spinner>
 
 <button mat-fab
   [disabled]="!menu"
