Add errors to detail cards

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -1,4 +1,4 @@
-<app-xunk-spinner *ngIf="!body"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!body" [error]="error"></app-xunk-spinner>
 
 <div class="full-container real-center">
   <div *ngIf="body" class="detail-card mat-elevation-z3">
