--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<app-xunk-spinner *ngIf="!profile"></app-xunk-spinner>
+<app-xunk-spinner *ngIf="!profile" [error]="error"></app-xunk-spinner>
 
 <div class="detail-card real-center mat-elevation-z3" *ngIf="profile">
   <!-- Head information -->
