Change to new theme

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -9,7 +9,7 @@
                        (change)="dateChanged($event)"
                        [heatmap]="getHeatMap()"
                        heatMapColor="rgb(255, 235, 59)"
-                       primaryColor="#673ab7">
+                       primaryColor="#536dfe">
         </xunk-calendar>
         <mat-chip-list class="mat-chip-list-stacked">
             <mat-chip color="accent" selected="true" id="head-chip">
