--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,7 +1,10 @@
 <app-xunk-spinner *ngIf="!event" [error]="error"></app-xunk-spinner>
 
 <div>
-  <div *ngIf="event" class="detail-card mat-elevation-z3" [class.real-center]="!noCenter">
+  <div *ngIf="event"
+        class="detail-card"
+       [class.real-center]="!noCenter"
+       [class.full-width]="desktopMode">
     <div class="theme-header primary-background-color">
       <img class="event-image"
            [src]="event.image_url"
@@ -52,16 +55,19 @@
           GOING
         </mat-checkbox>
     </div>
-    <div class="description markdown">
-      <markdown [data]="event.description"></markdown>
-    </div>
 
-    <!-- Bodies conducting the event -->
-    <div>
-        <app-body-card
-          *ngFor="let body of event.bodies"
-          [body]="body">
-      </app-body-card>
+    <div class="event-body">
+      <div class="description markdown">
+        <markdown [data]="event.description"></markdown>
+      </div>
+
+      <!-- Bodies conducting the event -->
+      <div>
+          <app-body-card
+            *ngFor="let body of event.bodies"
+            [body]="body">
+        </app-body-card>
+      </div>
     </div>
   </div>
 </div>
