--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -16,5 +16,23 @@
 
 .subhead {
     color: grey;
-    font-size: 10pt;
+    font-size: 1em;
+}
+
+.events-list {
+    padding: 10px 12% 0 12%;
+    overflow-x: hidden;
+    background-color: white;
+}
+
+@media (min-width: 961px) and (max-width: 1200px) {
+    .events-list {
+        padding: 10px 3% 0 3%;
+    }
+}
+
+@media (max-width: 960px) {
+    .events-list {
+        padding: 0 0 0 0;
+    }
 }
