--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -2,9 +2,11 @@
     height: auto;
 }
 
-.head-card img {
+.head-img {
+    width: 100%;
     object-fit: cover;
     max-height: 250px;
+    cursor: pointer;
 }
 
 .header {
