Fix top gap on desktop

--- a/src/app/mess/mess.component.html
+++ b/src/app/mess/mess.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!hostels || error" [error]="error"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <button mat-fab
   [disabled]="!menu"
   class="float-fixed-right-bottom mat-elevation-z2"
