--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!feed || error" [error]="error"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <ng-container *ngIf="feed">
   <ng-container *ngFor="let item of feed">
     <mat-card class="feed-card detail-card-elem real-center mat-elevation-z3" (click)="openLink(item.link)">
