--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!roles || error" [error]="error"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <div class="detail-card real-center mat-elevation-z3" *ngIf="roles">
   <mat-tab-group class="tab-group" mat-stretch-tabs [(selectedIndex)]="selIndex">
       <mat-tab label="Following">
