--- a/src/app/list-loading/list-loading.component.css
+++ b/src/app/list-loading/list-loading.component.css
@@ -15,23 +15,22 @@
     width: 4px;
     margin-right: 2px;
     height: 18px;
-    border-radius: 4px;
     animation: loading 1s ease-in-out infinite;
 }
 .loading-bar:nth-child(1) {
-    background-color: #3498db;
+    background-color: var(--primary-color);
     animation-delay: 0;
 }
 .loading-bar:nth-child(2) {
-    background-color: #c0392b;
+    background-color: var(--primary-color);
     animation-delay: 0.09s;
 }
 .loading-bar:nth-child(3) {
-    background-color: #f1c40f;
+    background-color: var(--primary-color);
     animation-delay: .18s;
 }
 .loading-bar:nth-child(4) {
-    background-color: #27ae60;
+    background-color: var(--primary-color);
     animation-delay: .27s;
 }
 
