FIx more desktop gaps

--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!event"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <div id="main" class="detail-card real-center mat-elevation-z3" *ngIf="event">
 
 <div class="theme-header">
