--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!body" [error]="error"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <div class="full-container real-center">
   <div *ngIf="body" class="detail-card mat-elevation-z3">
     <div class="theme-header primary-background-color">
