--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,5 +1,7 @@
 <app-xunk-spinner *ngIf="!profile" [error]="error"></app-xunk-spinner>
 
+<div class="desktop-10px"></div>
+
 <div class="detail-card real-center mat-elevation-z3" *ngIf="profile">
   <!-- Head information -->
   <div id="head">
