--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,10 +1,13 @@
 <app-xunk-spinner *ngIf="!event" [error]="error"></app-xunk-spinner>
 
+<div [class.desktop-10px]="!desktopMode"></div>
+
 <div>
   <div *ngIf="event"
         class="detail-card"
        [class.real-center]="!noCenter"
-       [class.full-width]="desktopMode">
+       [class.full-width]="desktopMode"
+       [class.mat-elevation-z2]="!desktopMode">
     <div class="theme-header primary-background-color">
       <img class="event-image"
            [src]="event.image_url"
@@ -71,3 +74,5 @@
     </div>
   </div>
 </div>
+
+<div class="desktop-10px"></div>
