Fix roboto light font

--- a/src/app/xunk-calendar/xunk-calendar.component.css
+++ b/src/app/xunk-calendar/xunk-calendar.component.css
@@ -13,8 +13,8 @@
 
 .monthname {
     font-size: 2.4em;
-    font-family: 'Roboto Light';
-    font-weight: 200;
+    font-family: 'Roboto';
+    font-weight: 300;
     margin-left: 25px;
 }
 
