--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Roboto|Russo+One');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400|Russo+One');
 @import 'emoji.css';
 
 body, .image-background {
