Change body to white

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 body, .image-background {
     /* Set font family */
     font-family: 'Roboto', sans-serif;
-    background-color: #e9ebee;
+    background-color: white;
 }
 
 * {
