--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,18 +2,14 @@
 
 <div class="desktop-10px"></div>
 
-<ng-container *ngIf="feed">
+<div *ngIf="feed" class="main-div">
   <ng-container *ngFor="let item of feed">
-    <mat-card class="feed-card detail-card-elem real-center mat-elevation-z3" (click)="openLink(item.link)">
-      <mat-card-header>
-        <mat-card-title><h3>{{item.title}}</h3></mat-card-title>
-        <mat-card-subtitle>{{item.published | date:"dd-MMM-yyyy HH:mm"}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <markdown [data]="item.content"></markdown>
-      </mat-card-content>
-    </mat-card>
+    <div class="feed-card" (click)="openLink(item.link)">
+        <div class="title">{{item.title}}</div>
+        {{item.published | date:"dd-MMM-yyyy HH:mm"}}
+        <markdown [data]="item.content" class="markdown"></markdown>
+    </div>
   </ng-container>
-</ng-container>
+</div>
 
 <app-list-loading *ngIf="loading"></app-list-loading>
