--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,7 +1,39 @@
+.main-title {
+    font-weight: 200;
+    font-size: 2.5em;
+    margin-left: 12%;
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
 .feed-card {
-    margin-bottom: 8px;
+    margin-left: 10%;
+    margin-bottom: 1em;
+
+    padding: 30px;
+    padding-top: 25px;
+
+    width: 100%;
+    max-width: 500px;
+
     cursor: pointer;
     overflow: hidden;
+    background-color: #f2f2f2;
+    position: relative;
+}
+
+.feed-title {
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.feed-subtitle{
+    font-weight: 200;
+    padding: 3px 0;
+}
+
+.markdown {
+    font-size: 0.95em;
 }
 
 .selected-reaction {
@@ -24,4 +56,17 @@ td.count {
     position:absolute;
     bottom:6px;
     right:6px;
+}
+
+@media (max-width: 767px) {
+    .feed-card {
+        margin: 1em auto;
+        padding: 25px;
+        width: calc(100% - 50px);
+    }
+    .main-title {
+        font-size: 1.8em;
+        margin-bottom: 0;
+        margin-top: 15px;
+    }
 }
