--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -1,25 +1,66 @@
 #searchbox {
-    margin-left: 45%;
-    transform: translateX(-50%);
+    margin-left: 5%;
     white-space: nowrap;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .margin-card {
+    background-color: #f2f2f2;
+    border-radius: 4px;
+    width: 42%;
     margin-bottom: 0.5em;
+    margin-left: 1%;
+    display: inline-block;
+}
+
+.section-main {
+    width: 100%;
+    margin-left: 4%;
 }
 
 .searchinput {
-    min-width: 60%;
+    min-width: 40%;
+}
+
+.header {
+    font-weight: 200;
+    font-size: 2.5em;
+    margin-left: 7%;
+    margin-bottom: 0.5em;
+    margin-top: 0.3em;
+}
+
+.header span {
+    margin-right: 20px;
+    color: #a0a0a0;
+    cursor: pointer;
+}
+
+.header .selected {
+    color: black;
+}
+
+@media (max-width: 768px) {
+    .searchinput {
+        min-width: 60%;
+    }
+
+    .margin-card {
+        width: 90%;
+    }
+
+    .header {
+        font-size: 1.5em;
+    }
 }
 
 @media (max-width: 560px) {
-    #searchbox {
-        margin-left: 40%;
+    .searchinput {
+        min-width: 80%;
     }
 
-    .searchinput {
-        min-width: 90%;
+    .margin-card {
+        width: 90%;
     }
 }
