--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -1,18 +1,24 @@
+.date-header {
+    font-weight: 200;
+    font-size: 2.5em;
+    margin-left: 1%;
+    margin-bottom: 0.5em;
+    margin-top: 0.3em;
+}
+
 .head-card {
     height: auto;
 }
 
 .head-img {
-    width: 100%;
     object-fit: cover;
     max-height: 250px;
-    cursor: pointer;
 }
 
 .header {
     text-align: center;
     margin-bottom: 10px;
-    font-family: Arial;
+    font-family: 'Roboto';
     padding-right: 200px;
 }
 
@@ -24,7 +30,10 @@
 .events-list {
     padding: 10px 12% 0 12%;
     overflow-x: hidden;
-    background-color: white;
+}
+
+.events-block {
+    margin-bottom: 2em;
 }
 
 @media (min-width: 961px) and (max-width: 1200px) {
@@ -36,5 +45,9 @@
 @media (max-width: 960px) {
     .events-list {
         padding: 0 0 0 0;
+    }
+
+    .date-header {
+        margin-left: 20px;
     }
 }
