--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,18 +4,21 @@
     *ngIf="events && !error"
     [event]="selectedEvent">
 
-    <img class="head-img" [src]="events[0].image_url" alt="" (click)=OpenEvent(events[0])>
     <div class="events-list">
-        <mat-card mat-ripple class="sub-card head-card" (click)=OpenEvent(events[0])>
-            <div> {{ events[0].name }} </div>
-            <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
-        </mat-card>
+        <div *ngFor="let c of containers" class="events-block">
+            <div class="date-header">{{c.title}}</div>
+            <mat-card mat-ripple class="sub-card head-card" (click)=OpenEvent(c.events[0])>
+                <img mat-card-image class="head-img" [src]="c.events[0].image_url" alt="" (click)=OpenEvent(c.events[0])>
+                <div> {{ c.events[0].name }} </div>
+                <span class="subhead">{{ dataService.GetDate(c.events[0].start_time) }} | {{ c.events[0].venues_str }}</span>
+            </mat-card>
 
-        <app-event-card *ngFor="let event of events.slice(1, events.length)"
-                        (click)=OpenEvent(event)
-                        [event]="event"
-                        overrideClick=true>
-        </app-event-card>
+            <app-event-card *ngFor="let event of c.events.slice(1, c.events.length)"
+                            (click)=OpenEvent(event)
+                            [event]="event"
+                            overrideClick=true>
+            </app-event-card>
+        </div>
     </div>
 
 </app-event-sidebar-desktop>
