Fix desktop layout on vertical iPad

--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
@@ -35,3 +35,10 @@
         width: calc(40vw);
     }
 }
+
+@media (max-width: 960px) {
+    .event-details-container {
+        left: 50vw;
+        width: 50vw;
+    }
+}
